--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <h1>Hello world</h1>
-    
+    <head>
+        <title> New webpage</title>
+    </head>
+    <pre>
+        <code>
+            x = 1;
+            y = 2;
+            print(x+y)
+        </code>
+    </pre>
+
+    <button> Click me! </button>
 </html>
