--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> New webpage</title>
+        <title> Cash Money!</title>
     </head>
-    <pre>
-        <code>
-            x = 1;
-            y = 2;
-            print(x+y)
-        </code>
-    </pre>
+    <h1 style = "font-size:200%; color:red">Cash Money!</h1>
+    <img src = "https://img.freepik.com/premium-vector/playing-card-vector-set-design-with-black-club-symbol_670330-147.jpg" alt = "Clubs" style = "width:512px;height:512px">
+    
+    <body>
+        <h2 style = "font-size:120%; color:purple"> Objective </h2>
+        <p> The objective of the game is to make as much money as you can, where your money comes from the <em>value</em> of your cards. </p>
+        <style>
+        body {
+          background-image: url('https://media.istockphoto.com/id/1062424918/photo/green-poker-table-felt-background-with-shade-vignette.jpg?s=170667a&w=0&k=20&c=XVnFAyN5okekiwWLAmtpCp_TXtv85f0-bDT6jrZ1gBk=');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100% 100%;
+        }
+        </style>
+
+    
 
     <button> Click me! </button>
 </html>
